--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> 主页 - Epose
     </title>
+    <script th:src="@{/app-assets/js/scripts/charts/echarts/echarts.js}" type="text/javascript"></script>
     <link rel="apple-touch-icon" th:href="@{/app-assets/images/ico/apple-icon-120.png}">
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/app-assets/images/ico/favicon.ico}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
@@ -108,12 +109,229 @@
 </div>
 <!--/ NAVIGATION - MENU -->
 
+
 <!-- CONTENT -->
 <div class="app-content content container-fluid">
     <div class="content-wrapper">
 
-        <div class="content-body">
+        <div class="row">
+
+            <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
             <div id="main" style="width: 600px;height:400px;"></div>
+            <script type="text/javascript">
+                // 基于准备好的dom，初始化echarts实例
+                var myChart = echarts.init(document.getElementById('main'));
+
+                // 指定图表的配置项和数据
+                var data_year_rang = [2015, 2016, 2017]
+                var data_dd = [{
+                    'dim_year': 2015,
+                    'radar_indicator': [{
+                        name: '外高桥',
+                        max: 30000
+                    }, {
+                        name: '川沙新镇',
+                        max: 30000
+                    }, {
+                        name: '陆家嘴',
+                        max: 30000
+                    }, {
+                        name: '唐镇',
+                        max: 30000
+                    }, {
+                        name: '浦东新区',
+                        max: 30000
+                    }, {
+                        name: '张江镇',
+                        max: 30000
+                    }, {
+                        name: '其他',
+                        max: 30000
+                    }],
+                    'trade_range': [20000, 20000, 12000, 15000, 5000, 20000]
+                },
+                    {
+                        'dim_year': 2016,
+                        'radar_indicator': [{
+                            name: '外高桥',
+                            max: 30000
+                        }, {
+                            name: '川沙新镇',
+                            max: 30000
+                        }, {
+                            name: '陆家嘴',
+                            max: 30000
+                        }, {
+                            name: '唐镇',
+                            max: 30000
+                        }, {
+                            name: '浦东新区',
+                            max: 30000
+                        }, {
+                            name: '张江镇',
+                            max: 30000
+                        }, {
+                            name: '其他',
+                            max: 30000
+                        }],
+                        'trade_range': [28000, 20000, 28000, 15000, 5000, 20000]
+                    }, {
+                        'dim_year': 2017,
+                        'radar_indicator': [{
+                            name: '外高桥',
+                            max: 30000
+                        }, {
+                            name: '川沙新镇',
+                            max: 30000
+                        },
+                            {
+                                name: '陆家嘴',
+                                max: 30000
+                            }, {
+                                name: '唐镇',
+                                max: 30000
+                            },
+                            {
+                                name: '亲子',
+                                max: 30000
+                            }, {
+                                name: '浦东新区',
+                                max: 30000
+                            }, {
+                                name: '张江镇',
+                                max: 30000
+                            }
+                        ],
+                        'trade_range': [28000, 20000, 28000, 15000, 18000, 20000]
+                    }
+                ]
+
+                option = {
+                    tooltip: {},
+                    baseOption: {
+                        title: {
+                            textStyle: {
+                                color: '#fff'
+                            }
+                        },
+                        timeline: {
+                            //  show: false,
+                            // y: 0,
+                            axisType: 'category',
+                            // realtime: false,
+                            // loop: false,
+                            autoPlay: true,
+                            // currentIndex: 2,
+                            playInterval: 5000,
+                            // controlStyle: {
+                            //     position: 'left'
+                            // },
+                            data: data_year_rang,
+                            label: {
+                                formatter: function(s) {
+                                    return (new Date(s)).getFullYear();
+                                }
+                            }
+                        },
+                        backgroundColor: {
+                            type: 'radial',
+                            x: 0.4,
+                            y: 0.4,
+                            r: 0.35,
+                            colorStops: [{
+                                offset: 0,
+                                color: '#1E253E' // 0% 处的颜色
+                            }, {
+                                offset: .2,
+                                color: '#242E5D' // 100% 处的颜色
+                            }, {
+                                offset: 1,
+                                color: '#1E253E' // 100% 处的颜色
+                            }],
+                            globalCoord: false // 缺省为 false
+                        },
+                        color: ['#FFD600'],
+                        tooltip: {},
+                        legend: {
+                            //data: ['预算分配（Allocated Budget）', '实际开销（Actual Spending）']
+                        },
+
+                        series: [{
+                            name: '',
+                            type: 'radar',
+                            areaStyle: {
+                                normal: {
+                                    shadowBlur: 13,
+                                    shadowColor: 'rgba(0,0,0,.2)',
+                                    shadowOffsetX: 0,
+                                    shadowOffsetY: 0,
+                                    opacity: 1
+                                }
+                            },
+                            itemStyle: {
+                                color: '#293C55',
+                                borderColor: '#293C55'
+                            },
+                        }]
+                    },
+
+                    options: [{
+                        title: {
+                            text: data_dd[0].dim_year,
+                        },
+                        radar: {
+
+                            splitNumber: 6,
+                            // shape: 'circle',
+                            indicator: data_dd[0].radar_indicator
+                        },
+                        series: [{
+                            data: [{
+                                value: data_dd[0].trade_range
+                            }]
+                        }]
+                    },
+
+                        {
+                            title: {
+                                text: data_dd[1].dim_year,
+                            },
+                            radar: {
+
+                                splitNumber: 6,
+                                // shape: 'circle',
+                                indicator: data_dd[1].radar_indicator
+                            },
+                            series: [{
+                                data: [{
+                                    value: data_dd[1].trade_range
+                                }]
+                            }]
+                        },
+                        {
+                            title: {
+                                text: data_dd[2].dim_year,
+                            },
+                            radar: {
+
+                                splitNumber: 6,
+                                // shape: 'circle',
+                                indicator: data_dd[2].radar_indicator
+                            },
+                            series: [{
+                                data: [{
+                                    value: data_dd[2].trade_range
+                                }]
+                            }]
+                        }
+
+
+                    ]
+                };
+
+                // 使用刚指定的配置项和数据显示图表。
+                myChart.setOption(option);
+            </script>
         </div>
     </div>
 </div>
@@ -126,228 +344,10 @@
     </p>
     <!-- ... -->
 </footer>
-<script>
-    var myChart = echarts.init(document.getElementById('main'));
-    var data_year_rang = [2015, 2016, 2017]
-    var data_dd = [{
-        'dim_year': 2015,
-        'radar_indicator': [{
-            name: '外高桥',
-            max: 30000
-        }, {
-            name: '川沙新镇',
-            max: 30000
-        }, {
-            name: '陆家嘴',
-            max: 30000
-        }, {
-            name: '唐镇',
-            max: 30000
-        }, {
-            name: '浦东新区',
-            max: 30000
-        }, {
-            name: '张江镇',
-            max: 30000
-        }, {
-            name: '其他',
-            max: 30000
-        }],
-        'trade_range': [20000, 20000, 12000, 15000, 5000, 20000]
-    },
-        {
-            'dim_year': 2016,
-            'radar_indicator': [{
-                name: '外高桥',
-                max: 30000
-            }, {
-                name: '川沙新镇',
-                max: 30000
-            }, {
-                name: '陆家嘴',
-                max: 30000
-            }, {
-                name: '唐镇',
-                max: 30000
-            }, {
-                name: '浦东新区',
-                max: 30000
-            }, {
-                name: '张江镇',
-                max: 30000
-            }, {
-                name: '其他',
-                max: 30000
-            }],
-            'trade_range': [28000, 20000, 28000, 15000, 5000, 20000]
-        }, {
-            'dim_year': 2017,
-            'radar_indicator': [{
-                name: '外高桥',
-                max: 30000
-            }, {
-                name: '川沙新镇',
-                max: 30000
-            },
-                {
-                    name: '陆家嘴',
-                    max: 30000
-                }, {
-                    name: '唐镇',
-                    max: 30000
-                },
-                {
-                    name: '亲子',
-                    max: 30000
-                }, {
-                    name: '浦东新区',
-                    max: 30000
-                }, {
-                    name: '张江镇',
-                    max: 30000
-                }
-            ],
-            'trade_range': [28000, 20000, 28000, 15000, 18000, 20000]
-        }
-    ]
-
-    option = {
-        tooltip: {},
-        baseOption: {
-            title: {
-                textStyle: {
-                    color: '#fff'
-                }
-            },
-            timeline: {
-                //  show: false,
-                // y: 0,
-                axisType: 'category',
-                // realtime: false,
-                // loop: false,
-                autoPlay: true,
-                // currentIndex: 2,
-                playInterval: 5000,
-                // controlStyle: {
-                //     position: 'left'
-                // },
-                data: data_year_rang,
-                label: {
-                    formatter: function(s) {
-                        return (new Date(s)).getFullYear();
-                    }
-                }
-            },
-            backgroundColor: {
-                type: 'radial',
-                x: 0.4,
-                y: 0.4,
-                r: 0.35,
-                colorStops: [{
-                    offset: 0,
-                    color: '#1E253E' // 0% 处的颜色
-                }, {
-                    offset: .2,
-                    color: '#242E5D' // 100% 处的颜色
-                }, {
-                    offset: 1,
-                    color: '#1E253E' // 100% 处的颜色
-                }],
-                globalCoord: false // 缺省为 false
-            },
-            color: ['#FFD600'],
-            tooltip: {},
-            legend: {
-                //data: ['预算分配（Allocated Budget）', '实际开销（Actual Spending）']
-            },
-
-            series: [{
-                name: '',
-                type: 'radar',
-                areaStyle: {
-                    normal: {
-                        shadowBlur: 13,
-                        shadowColor: 'rgba(0,0,0,.2)',
-                        shadowOffsetX: 0,
-                        shadowOffsetY: 0,
-                        opacity: 1
-                    }
-                },
-                itemStyle: {
-                    color: '#293C55',
-                    borderColor: '#293C55'
-                },
-            }]
-        },
-
-        options: [{
-            title: {
-                text: data_dd[0].dim_year,
-            },
-            radar: {
-
-                splitNumber: 6,
-                // shape: 'circle',
-                indicator: data_dd[0].radar_indicator
-            },
-            series: [{
-                data: [{
-                    value: data_dd[0].trade_range
-                }]
-            }]
-        },
-
-            {
-                title: {
-                    text: data_dd[1].dim_year,
-                },
-                radar: {
-
-                    splitNumber: 6,
-                    // shape: 'circle',
-                    indicator: data_dd[1].radar_indicator
-                },
-                series: [{
-                    data: [{
-                        value: data_dd[1].trade_range
-                    }]
-                }]
-            },
-            {
-                title: {
-                    text: data_dd[2].dim_year,
-                },
-                radar: {
-
-                    splitNumber: 6,
-                    // shape: 'circle',
-                    indicator: data_dd[2].radar_indicator
-                },
-                series: [{
-                    data: [{
-                        value: data_dd[2].trade_range
-                    }]
-                }]
-            }
-
-        ]
-    };
-
-    myChart.setOption(option);
-</script>
 <!-- BEGIN VENDOR JS-->
 <script th:src="@{/app-assets/vendors/js/vendors.min.js}" type="text/javascript"></script>
 <!-- BEGIN VENDOR JS-->
 <!-- BEGIN PAGE VENDOR JS-->
-<script th:src="@{/app-assets/vendors/js/charts/chart.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/vendors/js/charts/echarts/echarts.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/vendors/js/charts/raphael-min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/vendors/js/charts/morris.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js}"
-        type="text/javascript"></script>
-<script th:src="@{/app-assets/vendors/js/charts/jvector/jquery-jvectormap-world-mill.js}"
-        type="text/javascript"></script>
-<script th:src="@{/app-assets/data/jvector/visitor-data.js}" type="text/javascript"></script>
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN MODERN JS-->
 <script th:src="@{/app-assets/js/core/app-menu.js}" type="text/javascript"></script>
@@ -355,15 +355,8 @@
 <script th:src="@{/app-assets/js/scripts/customizer.js}" type="text/javascript"></script>
 <!-- END MODERN JS-->
 <!-- BEGIN PAGE LEVEL JS-->
-<script th:src="@{/app-assets/js/scripts/pages/dashboard-sales.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/basic-area.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/basic-line.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/irregular-line-time-axis.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/irregular-line-two-value-axis.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/line-multilevel-control.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/stacked-area.min.js}" type="text/javascript"></script>
-<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/stacked-line.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/echarts.js}" type="text/javascript"></script>
 <!-- END PAGE LEVEL JS-->
 </body>
 <!--/ BODY -->
-</html>
+</html>s
